Fix drum container width to align it to the center

--- a/Day1 - Drum Kit/stylesheet.css
+++ b/Day1 - Drum Kit/stylesheet.css
@@ -1,12 +1,3 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;top: 50%;
-  position: absolute;
-  transform: translate(0, -50%);
-}
-
 body:after {
   content : "";
   display: block;
@@ -18,6 +9,16 @@ body:after {
   height: 100%;
   opacity : 0.5;
   z-index: -1;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;top: 50%;
+  position: absolute;
+  transform: translate(0, -50%);
+  width: 100%;
 }
 
 .drum {
